--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,14 +8,37 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 ### Removed
 ### Fixed
+
+## [2.1.3] - 2023-05-24
+### Added
+- python-only backed
+
+## [2.1.2] - 2023-05-09
+### Added
+- Auto doc generation and update with gitlab CI/CD
 ### Changed
+- README.md
+
+## [2.1.1] - 2023-05-04
+### Added
+- Python 3.6 support
+
+## [2.1.0] - 2023-05-03
+### Added
+- GPU support, with CuPy
+### Fixed
+- Varioius fixes and improvements
+### Changed
+- From travis CI/CD to gitlab CI/CD
+
+## [2.0.11] - 2019-07-15
+### Fixed
+- Setup process
 
 ## [2.0.0] - 2018-06-22
 ### Added
 - setup.py: that supports actions such as clean, test, pep8, develop, docs, compile
 - many unittests
-### Removed
-### Fixed
 ### Changed
 - Relative imports within the library
 - All library modules under blond directory
@@ -24,43 +47,30 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Renamed setup_cpp.py to compile.py. 
 
 ## [1.19.0] - 2017-03-28
-### Added
-### Removed
-### Fixed
 ### Changed
 - Several files have been rearranged and simplified
 
 ## [1.18.0] - 2017-02-10
-### Added
-### Removed
 ### Fixed
 - Fixed an important bug in linear_interp_kick.cpp: before the acceleration kick was not applied if rf_kick_interp==TRUE in RingAndRFSection
-### Changed
 
 ## [1.17.0] - 2016-01-18
 ### Added
 - Numerical synchrotron frequency distribution added (TC12)
 - Possibility to compute multi-turn wake with acceleration (inimpedance.py) 
-### Removed
-### Fixed
-### Changed
 
 ## [1.16.0] - 2016-10-24
 ### Added
 - MuSiC algorithm
 - TC11 added 
-### Removed
 ### Fixed
 - minor bugs
-### Changed
 
 ## [1.15.1] - 2016-07-29
 ### Added
 - Several upgrades 
-### Removed
 ### Fixed
 - bug fixes
-### Changed
 
 ## [1.14.5] - 2016-06-23
 ### Added
@@ -68,5 +78,3 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - documentation on-line for PSB phase loop added
 ### Removed
 - setup_cython.py removed because not used
-### Fixed
-### Changed
