major piece of Assembler implementation ready

--- a/test_assembler.ipynb
+++ b/test_assembler.ipynb
@@ -18,8 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import division, print_function\n",
-    "\n",
     "import os\n",
     "from builtins import range\n",
     "\n",
@@ -108,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "2d003adf-3a7a-4a64-94db-14ab9196cc9a",
    "metadata": {},
    "outputs": [
@@ -130,8 +128,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pipeline:  [<bound method RingAndRFTracker.track of <blond.trackers.tracker.RingAndRFTracker object at 0x7fb499be8df0>>, <bound method Profile.track of <blond.beam.profile.Profile object at 0x7fb499ae6f40>>]\n",
-      "Objects:  {'Ring': <blond.input_parameters.ring.Ring object at 0x7fb499b36640>, 'Beam': <blond.beam.beam.Beam object at 0x7fb499be8e50>, 'RFStation': <blond.input_parameters.rf_parameters.RFStation object at 0x7fb499b78550>, 'RingAndRFTracker': <blond.trackers.tracker.RingAndRFTracker object at 0x7fb499be8df0>, 'Profile': <blond.beam.profile.Profile object at 0x7fb499ae6f40>}\n"
+      "Assembler with 2 tracking elements and 5 objects.\n",
+      "Pipeline elements:\n",
+      "\t0. blond.beam.profile\n",
+      "\t1. blond.trackers.tracker\n",
+      "Objects:\n",
+      "\tRing\n",
+      "\tBeam\n",
+      "\tRFStation\n",
+      "\tRingAndRFTracker\n",
+      "\tProfile\n"
      ]
     }
    ],
@@ -139,8 +145,7 @@
     "# Use case 1: Initialize from object list\n",
     "assembler = Assembler(element_list=[ring, beam, rf, long_tracker, profile])\n",
     "assembler.build_pipeline()\n",
-    "print('Pipeline: ', assembler.pipeline)\n",
-    "print('Objects: ', assembler.objects)"
+    "print(assembler)"
    ]
   },
   {
