Assembler almost ready

--- a/test_assembler.ipynb
+++ b/test_assembler.ipynb
@@ -13,14 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "4eaca186-f8a1-41fe-95f6-a7faad8e2263",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------- Using the C++ computational backend ----------\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "from builtins import range\n",
-    "\n",
     "import matplotlib as mpl\n",
     "import numpy as np\n",
     "\n",
@@ -42,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "6de32e78-f470-4c29-944c-e525ab17fce0",
    "metadata": {},
    "outputs": [
@@ -106,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "2d003adf-3a7a-4a64-94db-14ab9196cc9a",
    "metadata": {},
    "outputs": [
@@ -114,43 +119,57 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:blond.utils.assembler:Error importing module blond.gpu.butils_wrap_cupy: No module named 'cupy'\n",
-      "DEBUG:blond.utils.assembler:Error importing module blond.toolbox.parameter_scaling: /home/kiliakis/git/BLonD-1/venv/lib/python3.9/site-packages/PyQt5/QtCore.abi3.so: undefined symbol: _ZdaPvm, version Qt_5\n",
-      "DEBUG:blond.utils.assembler:Error importing module blond.utils.mpi_config: No module named 'mpi4py'\n",
       "DEBUG:blond.utils.assembler:Found element of type: Ring\n",
       "DEBUG:blond.utils.assembler:Found element of type: Beam\n",
       "DEBUG:blond.utils.assembler:Found element of type: RFStation\n",
       "DEBUG:blond.utils.assembler:Found element of type: RingAndRFTracker\n",
-      "DEBUG:blond.utils.assembler:Found element of type: Profile\n"
+      "DEBUG:blond.utils.assembler:Found element of type: Profile\n",
+      "DEBUG:blond.utils.assembler:Found element of type: BeamStats\n",
+      "DEBUG:blond.utils.assembler:Found dictionary element with 0 positional arguments and 6 kwargs\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assembler with 2 tracking elements and 5 objects.\n",
+      "Assembler with 3 tracking elements and 6 objects.\n",
       "Pipeline elements:\n",
-      "\t0. blond.beam.profile\n",
-      "\t1. blond.trackers.tracker\n",
+      "\t0. Profile-4\n",
+      "\t1. RingAndRFTracker-3\n",
+      "\t2. BeamStats-5\n",
       "Objects:\n",
       "\tRing\n",
       "\tBeam\n",
       "\tRFStation\n",
       "\tRingAndRFTracker\n",
-      "\tProfile\n"
+      "\tProfile\n",
+      "\tBeamStats\n"
      ]
     }
    ],
    "source": [
+    "class BeamStats(Trackable):\n",
+    "    def __init__(self, beam, period=1):\n",
+    "        super().__init__(period)\n",
+    "        self.beam = beam\n",
+    "\n",
+    "    def track(self):\n",
+    "        print(f\"dE mean: {np.mean(self.beam.dE):.3g}, dE std: {np.std(self.beam.dE):3g}\")\n",
+    "        print(f\"dt mean: {np.mean(self.beam.dt):.3g}, dt std: {np.std(self.beam.dt):3g}\")\n",
+    "\n",
     "# Use case 1: Initialize from object list\n",
-    "assembler = Assembler(element_list=[ring, beam, rf, long_tracker, profile])\n",
+    "assembler = Assembler(element_list=[ring, beam, rf, long_tracker, profile, BeamStats(beam, period=50)])\n",
     "assembler.build_pipeline()\n",
+    "assembler.build_distribution(distribution={\n",
+    "    'bigaussian': {'Ring': 'Ring', 'RFStation': 'RFStation', 'Beam': 'Beam', 'sigma_dt': tau_0 / 4,\n",
+    "                   'reinsertion': True, 'seed': 1}\n",
+    "})\n",
     "print(assembler)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "ba2ecf58",
    "metadata": {},
    "outputs": [
@@ -158,14 +177,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------+------------------+--------------------+---------+-------+------------+\n",
-      "| function               | total time (sec) | time per call (ms) | std (%) | calls | global (%) |\n",
-      "+------------------------+------------------+--------------------+---------+-------+------------+\n",
-      "| blond.beam.profile     | 0.043            | 0.428              | 32.392  | 100   | 38.379     |\n",
-      "| blond.trackers.tracker | 0.069            | 0.687              | 14.194  | 100   | 61.621     |\n",
-      "| other                  | 0.000            | 0.000              | 0.000   | 1     | 0.000      |\n",
-      "| total_time             | 0.111            | 111.432            | 0.000   | 1     | 100        |\n",
-      "+------------------------+------------------+--------------------+---------+-------+------------+\n"
+      "dE mean: -9.1e+04, dE std: 3.62722e+07\n",
+      "dt mean: 8.52e-10, dt std: 9.46589e-11\n",
+      "dE mean: -4.8e+06, dE std: 3.43386e+07\n",
+      "dt mean: 8.44e-10, dt std: 1.01899e-10\n",
+      "+--------------------+------------------+--------------------+---------+-------+------------+\n",
+      "| function           | total time (sec) | time per call (ms) | std (%) | calls | global (%) |\n",
+      "+--------------------+------------------+--------------------+---------+-------+------------+\n",
+      "| BeamStats-5        | 0.001            | 0.621              | 31.800  | 2     | 0.860      |\n",
+      "| Profile-4          | 0.060            | 0.604              | 41.923  | 100   | 41.854     |\n",
+      "| RingAndRFTracker-3 | 0.083            | 0.827              | 23.265  | 100   | 57.287     |\n",
+      "| other              | 0.000            | 0.000              | 0.000   | 1     | -0.000     |\n",
+      "| total_time         | 0.144            | 144.394            | 0.000   | 1     | 100        |\n",
+      "+--------------------+------------------+--------------------+---------+-------+------------+\n"
      ]
     }
    ],
